--- a/i3hloc.cabal
+++ b/i3hloc.cabal
@@ -7,7 +7,6 @@ license:             BSD3
 license-file:        LICENSE
 author:              Radoslaw Rowicki
 maintainer:          radrowicki@gmail.com
-copyright:           GNU
 category:            utils
 build-type:          Simple
 cabal-version:       >=1.10
@@ -17,4 +16,4 @@ executable i3hloc
   hs-source-dirs:      src
   main-is:             Main.hs
   default-language:    Haskell2010
-  build-depends:       base >= 4.7 && < 5
+  build-depends:       base > 4 && < 9
