--- a/i3hloc.cabal
+++ b/i3hloc.cabal
@@ -16,4 +16,5 @@ executable i3hloc
   hs-source-dirs:      src
   main-is:             Main.hs
   default-language:    Haskell2010
-  build-depends:       base > 4 && < 9
+  build-depends:       base > 4 && < 9,
+                       process
