--- a/i3hloc.cabal
+++ b/i3hloc.cabal
@@ -17,4 +17,6 @@ executable i3hloc
   main-is:             Main.hs
   default-language:    Haskell2010
   build-depends:       base > 4 && < 9,
-                       process
+                       process,
+                       split,
+                       font-awesome-type
