--- a/i3hloc.cabal
+++ b/i3hloc.cabal
@@ -23,3 +23,14 @@ executable i3hloc
                        font-awesome-type,
                        directory,
                        clock
+
+  Other-modules:       Block,
+                       Blocks.Bandwidth,
+                       Blocks.Battery,
+                       Blocks.Command,
+                       Blocks.Time,
+                       Blocks.Volume,
+                       Colors,
+                       Config,
+                       Hloc,
+                       Pango
