--- a/i3hloc.cabal
+++ b/i3hloc.cabal
@@ -1,5 +1,5 @@
 name:                i3hloc
-version:             0.1.0.0
+version:             0.1.1.0
 -- synopsis:
 -- description:
 homepage:            https://bitbucket.org/ikciwor/i3hloc#readme
@@ -9,20 +9,25 @@ author:              Radoslaw Rowicki
 maintainer:          radrowicki@gmail.com
 category:            utils
 build-type:          Simple
-ghc-options:         -O2
 cabal-version:       >=1.10
 extra-source-files:  README.md
 
 executable i3hloc
+  ghc-options:         -O2
   hs-source-dirs:      src
   main-is:             Main.hs
   default-language:    Haskell2010
   build-depends:       base > 4 && < 9,
-                       process,
-                       split,
-                       font-awesome-type,
+                       clock,
                        directory,
-                       clock
+                       font-awesome-type,
+                       process,
+                       regex,
+                       regex-base,
+                       regex-posix,
+                       split,
+                       text,
+                       text-show
 
   Other-modules:       Block,
                        Blocks.Bandwidth,
