--- a/stack.yaml
+++ b/stack.yaml
@@ -5,62 +5,64 @@ extra-package-dbs: []
 packages:
 - .
 extra-deps:
-- base-compat-0.9.3
-- clock-0.7.2
-- font-awesome-type-0.1
-- hashable-1.2.6.1
-- json-0.9.1
-- mtl-2.2.1
-- parsec-3.1.11
-- regex-1.0.0.0
-- regex-base-0.93.2
-- regex-posix-0.95.2
-- regex-tdfa-1.2.2
-- regex-tdfa-text-1.0.0.3
-- split-0.2.3.1
-- syb-0.7
-- text-1.2.2.2
-- time-locale-compat-0.1.1.3
-- unordered-containers-0.2.8.0
+- StateVar-1.1.0.4
+- adjunctions-4.3
 - ansi-terminal-0.6.3.1
 - ansi-wl-pprint-0.6.7.3
+- attoparsec-0.13.1.0
+- base-compat-0.9.3
+- base-orphans-0.6
+- base-unicode-symbols-0.2.2.4
+- bifunctors-5.4.2
 - blaze-builder-0.4.0.2
 - blaze-html-0.9.0.1
 - blaze-markup-0.8.0.0
 - cabal-doctest-1.0.2
 - charset-0.3.7.1
+- clock-0.7.2
 - comonad-5.0.1
-- fingertree-0.1.1.0
-- lens-4.15.3
-- parsers-0.12.5
-- profunctors-5.2
-- reducers-3.12.1
-- semigroups-0.18.3
-- utf8-string-1.0.1.1
-- attoparsec-0.13.1.0
-- base-orphans-0.6
-- bifunctors-5.4.2
 - contravariant-1.4
+- dates-0.2.2.1
 - distributive-0.5.2
 - exceptions-0.8.3
-- free-4.12.4
-- kan-extensions-5.0.2
-- parallel-3.2.1.1
-- reflection-2.1.2
-- scientific-0.3.5.1
-- semigroupoids-5.2
-- tagged-0.8.5
-- th-abstraction-0.2.3.0
-- transformers-compat-0.5.1.4
-- vector-0.12.0.1
-- void-0.7.2
-- StateVar-1.1.0.4
-- adjunctions-4.3
 - fail-4.9.0.0
+- fingertree-0.1.1.0
+- font-awesome-type-0.1
+- free-4.12.4
+- hashable-1.2.6.1
 - integer-logarithms-1.0.2
+- json-0.9.1
+- kan-extensions-5.0.2
+- lens-4.15.3
+- mtl-2.2.1
+- parallel-3.2.1.1
+- parsec-3.1.11
+- parsers-0.12.5
 - prelude-extras-0.4.0.3
 - primitive-0.6.2.0
-- stm-2.4.4.1
-- trifecta-1.7
+- profunctors-5.2
 - raw-strings-qq-1.1
+- reducers-3.12.1
+- reflection-2.1.2
+- regex-1.0.0.0
+- regex-base-0.93.2
+- regex-posix-0.95.2
+- regex-tdfa-1.2.2
+- regex-tdfa-text-1.0.0.3
+- scientific-0.3.5.1
+- semigroupoids-5.2
+- semigroups-0.18.3
+- split-0.2.3.1
+- stm-2.4.4.1
+- syb-0.7
+- tagged-0.8.5
+- text-1.2.2.2
+- th-abstraction-0.2.3.0
+- time-locale-compat-0.1.1.3
+- transformers-compat-0.5.1.4
+- trifecta-1.7
+- unordered-containers-0.2.8.0
+- utf8-string-1.0.1.1
+- vector-0.12.0.1
+- void-0.7.2
 resolver: ghc-8.0.1
