--- a/stack.yaml
+++ b/stack.yaml
@@ -44,11 +44,6 @@ extra-deps:
 - raw-strings-qq-1.1
 - reducers-3.12.1
 - reflection-2.1.2
-- regex-1.0.0.0
-- regex-base-0.93.2
-- regex-posix-0.95.2
-- regex-tdfa-1.2.2
-- regex-tdfa-text-1.0.0.3
 - scientific-0.3.5.1
 - semigroupoids-5.2
 - semigroups-0.18.3
@@ -65,4 +60,4 @@ extra-deps:
 - utf8-string-1.0.1.1
 - vector-0.12.0.1
 - void-0.7.2
-resolver: ghc-8.0.1
+resolver: lts-9.5
